generalizando o get dos topicos