@@ -2,23 +2,21 @@ package com.dbc.vemserback.ecommerce.service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
-import com.dbc.vemserback.ecommerce.dto.PurchaseList.PurchaseGetDTO;
-import com.dbc.vemserback.ecommerce.dto.quotation.QuotationGetDTO;
-import com.dbc.vemserback.ecommerce.dto.topic.FullTopicDTO;
-import com.dbc.vemserback.ecommerce.dto.topic.TopicDTO;
 import com.dbc.vemserback.ecommerce.dto.topic.TopicCreateDTO;
+import com.dbc.vemserback.ecommerce.dto.topic.TopicDTO;
 import com.dbc.vemserback.ecommerce.dto.topic.TopicFinancierDTO;
 import com.dbc.vemserback.ecommerce.entity.TopicEntity;
 import com.dbc.vemserback.ecommerce.entity.UserEntity;
+import com.dbc.vemserback.ecommerce.enums.Groups;
 import com.dbc.vemserback.ecommerce.enums.StatusEnum;
 import com.dbc.vemserback.ecommerce.exception.BusinessRuleException;
 import com.dbc.vemserback.ecommerce.repository.post.TopicRepository;
@@ -35,7 +33,6 @@ public class TopicService {
 	private final UserService userService;
 
 	public Integer createTopic(TopicCreateDTO dto, Integer userId) throws BusinessRuleException {
-
 		UserEntity user = userService.findById(userId);
 		TopicEntity entity = TopicEntity.builder().date(LocalDate.now()).status(StatusEnum.valueOf(StatusEnum.OPEN.name()))
 				.title(dto.getTitle()).totalValue(BigDecimal.ZERO).user(user)
@@ -49,21 +46,19 @@ public class TopicService {
 
 	public TopicCreateDTO updateStatusToTopic(Integer idTopic, StatusEnum status) throws BusinessRuleException {
 		TopicEntity topic = topicRepository.findById(idTopic).orElseThrow((() -> new BusinessRuleException("Topic not found")));
-
 		topic.setStatus(status);
 		return objectMapper.convertValue(topicRepository.save(topic), TopicCreateDTO.class);
 	}
 
-	public List<FullTopicDTO> listTopicsFull() {
-		return new ArrayList<>(topicRepository.findAll().stream().map(this::getTopicFull).toList());
-	}
-
-	private FullTopicDTO getTopicFull(TopicEntity topicEntity) {
-		FullTopicDTO fullTopicDTO = objectMapper.convertValue(topicEntity, FullTopicDTO.class);
-		fullTopicDTO.setPurchases(topicEntity.getPurchases().stream().map(purchase -> objectMapper.convertValue(purchase, PurchaseGetDTO.class)).collect(Collectors.toList()));
-		fullTopicDTO.setQuotations(topicEntity.getQuotations().stream().map(quotation -> objectMapper.convertValue(quotation, QuotationGetDTO.class)).collect(Collectors.toList()));
-		return fullTopicDTO;
-	}
+//	public List<FullTopicDTO> listTopicsFull() {
+//		return new ArrayList<>(topicRepository.findAll().stream().map(this::getTopicFull).toList());
+//	}
+//	private FullTopicDTO getTopicFull(TopicEntity topicEntity) {
+//		FullTopicDTO fullTopicDTO = objectMapper.convertValue(topicEntity, FullTopicDTO.class);
+//		fullTopicDTO.setPurchases(topicEntity.getPurchases().stream().map(purchase -> objectMapper.convertValue(purchase, PurchaseGetDTO.class)).collect(Collectors.toList()));
+//		fullTopicDTO.setQuotations(topicEntity.getQuotations().stream().map(quotation -> objectMapper.convertValue(quotation, QuotationGetDTO.class)).collect(Collectors.toList()));
+//		return fullTopicDTO;
+//	}
 
 	public TopicEntity topicById(Integer topicId) throws BusinessRuleException{
 		return topicRepository.findById(topicId).orElseThrow((() -> new BusinessRuleException("Topic not found")));
@@ -101,6 +96,28 @@ public class TopicService {
 		findById.setTotalValue(bigDecimal);
 		findById.setStatus(StatusEnum.OPEN);
 		this.topicRepository.save(findById);
+	}
+	
+	public Page<TopicDTO> getTopics(List<SimpleGrantedAuthority> authorities, int userId, int page) throws BusinessRuleException {
+		List<String> collect = authorities.stream().map(smp -> smp.getAuthority()).collect(Collectors.toList());
+		if(collect.contains(Groups.BUYER.getGroupName())) {
+			return this.findAllByStatus(StatusEnum.OPEN, page);
+		}if(collect.contains(Groups.MANEGER.getGroupName())) {
+			return this.findAllByStatus(StatusEnum.OPEN, page);
+		}if(collect.contains(Groups.FINANCIER.getGroupName())) {
+			return this.findAllByStatus(StatusEnum.OPEN, page);
+		}else {
+			return this.listAllTopicsByUserId(userId,page);
+		}
+	}
+	
+	private Page<TopicDTO> findAllByStatus(StatusEnum enumTopic, int page) throws BusinessRuleException{
+		PageRequest pageRequest = PageRequest.of(
+                page,
+                10,
+                Sort.Direction.ASC,
+                "title");
+		return this.topicRepository.findAllByStatus(enumTopic, pageRequest);
 	}
 	
 	private TopicEntity findById(int idTopic) throws BusinessRuleException {
